# aurova_preprocessed

./: .gitignore  .project  README.md
ackermann_to_odom/: CMakeLists.txt  ato_doxygen_config  package.xml
ackermann_to_odom/cfg/: AckermannToOdom.cfg
ackermann_to_odom/include/: ackermann_to_odom_alg.h  ackermann_to_odom_alg_node.h
ackermann_to_odom/launch/: start_odometry.launch
ackermann_to_odom/src/: ackermann_to_odom_alg.cpp  ackermann_to_odom_alg_node.cpp
aurova_preprocessed/: CMakeLists.txt  package.xml
dump_imu_data_for_calibration_with_imutk/: CMakeLists.txt  package.xml
dump_imu_data_for_calibration_with_imutk/cfg/: DumpImuDataForCalibrationWithImutk.cfg
dump_imu_data_for_calibration_with_imutk/include/: dump_imu_data_for_calibration_with_imutk_alg.h  dump_imu_data_for_calibration_with_imutk_alg_node.h
dump_imu_data_for_calibration_with_imutk/src/: dump_imu_data_for_calibration_with_imutk_alg.cpp  dump_imu_data_for_calibration_with_imutk_alg_node.cpp
gps_to_odom/: CMakeLists.txt  package.xml
gps_to_odom/cfg/: GpsToOdom.cfg
gps_to_odom/include/: gps_to_odom_alg.h  gps_to_odom_alg_node.h
gps_to_odom/src/: gps_to_odom_alg.cpp  gps_to_odom_alg_node.cpp
image2pcl/: CMakeLists.txt  README.md  package.xml
image2pcl/launch/: image2pcl.launch  image2pcl_kitti.launch  ouster_yolo.launch  tracker_filtered.launch
image2pcl/rviz/: ouster_filtering.rviz  tracker_filtered.rviz
image2pcl/src/: image2pcl.cpp  image2pcl_kitti.cpp  ouster_filtered_yolo.cpp  tracker_filtered.cpp
kitti_preprocess/: CMakeLists.txt  README.md  package.xml
kitti_preprocess/cfg/: KittiPreprocess.cfg
kitti_preprocess/config/: params.yaml
kitti_preprocess/include/: kitti_preprocess_alg.h  kitti_preprocess_alg_node.h
kitti_preprocess/launch/: node.launch  test.launch
kitti_preprocess/src/: kitti_preprocess_alg.cpp  kitti_preprocess_alg_node.cpp
lidar_camera_fusion/: CMakeLists.txt  README.md  cfg_params.yaml
lidar_camera_fusion/cfg/: cfg_params.yaml  cfg_params_old.yaml
lidar_camera_fusion/launch/: ouster_os1-u128.launch
lidar_camera_fusion/src/: lidar_camera_node.cpp  lidar_camera_node_simple.cpp
lidar_obstacle_detection/: CMakeLists.txt  package.xml
lidar_obstacle_detection/launch/: ouster_obstacles.launch
lidar_obstacle_detection/src/: ouster_obstacle_filtering.cpp
merged_channels_ouster/: CMakeLists.txt  merge_channels_ouster.py  package.xml  save_merge_channels_ouster.py
merged_channels_ouster/rviz/: ouster_rviz.rviz
online_calibration/: CMakeLists.txt  package.xml
online_calibration/cfg/: OnlineCalibration.cfg
online_calibration/include/: online_calibration_alg.h  online_calibration_alg_node.h
online_calibration/launch/: online_calibration.launch
online_calibration/scripts/: acumMatches.m  analizeResults.m  cartesian2SphericalInDegrees.m  clusterEntropy.m  computeRms.m  constants.m  crossCorrelation.m  errorCorrection.m  extTargetlessCalibration.m  fillLidarCfg.m  fillVlp16PuckCfg.m  filterScanAzimuth.m  findImageIndex.m  findImageKpCorrespondence.m  generateMisscalibration.m  getCameraParams.m  getConfigurationParams.m  gpuProofs.m  gpuProofs2.m  gpu_proofs.m  histogramLocal.m  imageCrossCorrelation.m  imageDepthFromLidar.m  imageDepthFromScans.m  imageDistributionMLE.m  imageEntropy.m  imageErode.m  imageKLDivergence.m  imageMutualInformation.m  imageSegmentation.m  initState.m  kernelGaussian.m  lidarImageCorregistration.m  limitValue.m  location.m  main.m  main_filter.m  main_it.m  main_matching.m  main_segmentation.m  (+20 more)
online_calibration/scripts/code_backup/: filterScanAzimuth.m  findImageIndexGpu.m  getTfAffineMatrix.m  getTfMatrix.m  gpuProofs.m  gpuProofs2.m  gpuProofsRead.m  gpuTransform.m  gpu_proofs.m  helperProcessPointCloud.m  imageDilate.m  imageDistributionKDE.m  imageEntropy.m  imageJoinKDE.m  imageKmeansSeg.m  (+12 more)
online_calibration/src/: online_calibration_alg.cpp  online_calibration_alg_node.cpp
online_calibration_keyboard/: CMakeLists.txt  package.xml
online_calibration_keyboard/cfg/: OnlineCalibrationKeyboard.cfg
online_calibration_keyboard/include/: online_calibration_keyboard_alg.h  online_calibration_keyboard_alg_node.h
online_calibration_keyboard/src/: online_calibration_keyboard_alg.cpp  online_calibration_keyboard_alg_node.cpp
online_calibration_tf/: CMakeLists.txt  package.xml
online_calibration_tf/cfg/: OnlineCalibrationTf.cfg
online_calibration_tf/data/: current_tf.data
online_calibration_tf/include/: online_calibration_tf_alg.h  online_calibration_tf_alg_node.h
online_calibration_tf/src/: online_calibration_tf_alg.cpp  online_calibration_tf_alg_node.cpp
ouster_filtering/: CMakeLists.txt  README.md  package.xml
ouster_filtering/launch/: ouster_filtering.launch
ouster_filtering/rviz/: ouster_filtering.rviz
ouster_filtering/src/: ouster_filtering.cpp
pc2image/: CMakeLists.txt  README.md  package.xml
pc2image/launch/: Kitti_pc2image.launch  VLP16_image.launch  VLP16_imagefft.launch  VLP16_pc2image.launch  carla_image.launch  ouster_image.launch  ouster_image_lite.launch
pc2image/rviz/: pc2image_rviz.rviz
pc2image/src/: fft.py  filter_sri.cpp  image_process.py  pc2image.cpp
pc_features/: CMakeLists.txt  README.md  package.xml
pc_features/launch/: HeLiPR_extraction.launch  Kitti_extraction.launch  NTU_VIRAL.launch  VLP16_extraction.launch  VLP16_extraction_fft.launch  conSlam_dataset.launch  hesai_pandar.launch  livox_360_extraction.launch  ouster_image.launch  ouster_image_lite.launch
pc_features/rviz/: kitti_dataset.rviz  pc2image_rviz.rviz
pc_features/src/: filter_PCL.py  pc2image.cpp  pc2image_interpolation.cpp  pc2image_z_depth_data.cpp
pc_filter/: CMakeLists.txt  package.xml
pc_filter/src/: fft.py  filter.py  filter_sri (copia).cpp  filter_sri.cpp  filter_sri_old.cpp  icp.py  odom.py  opt.py  opticalFlow.py
virtual_imu/: CMakeLists.txt  package.xml  vimu_doxygen_config
virtual_imu/cfg/: VirtualImu.cfg
virtual_imu/include/: kalman_filter.h  virtual_imu_alg.h  virtual_imu_alg_node.h
virtual_imu/src/: kalman_filter.cpp  virtual_imu_alg.cpp  virtual_imu_alg_node.cpp
